Bug 1633470 - Use on composer's header and autocomplete panel the correct scrollbar colors for light themes. r=aleca

--- a/mail/themes/shared/mail/messengercompose.css
+++ b/mail/themes/shared/mail/messengercompose.css
@@ -20,9 +20,6 @@
   background-color: var(--toolbar-bgcolor) !important;
   background-image: none !important;
   color: var(--lwt-text-color);
-}
-
-:root[lwt-tree] #headers-box {
   --toolbarbutton-hover-background: var(--lwt-toolbarbutton-hover-background);
   --toolbarbutton-hover-bordercolor: var(--lwt-toolbarbutton-hover-background);
 
@@ -30,7 +27,11 @@
   --toolbarbutton-active-bordercolor: var(--lwt-toolbarbutton-active-background);
   --toolbarbutton-active-boxshadow: 0 0 0 1px var(--lwt-toolbarbutton-active-background) inset;
 
-  scrollbar-color: rgba(249,249,250,.4) rgba(20,20,25,.3);
+  scrollbar-color: rgba(128, 128, 128, 0.5) rgba(230, 230, 235, 0.5);
+}
+
+:root[lwt-tree-brighttext] #headers-box {
+  scrollbar-color: rgba(249, 249, 250, 0.4) rgba(20, 20, 25, 0.3);
 }
 
 :root[lwt-tree] #MsgHeadersToolbar {
@@ -53,13 +54,17 @@
   background-color: var(--lwt-toolbar-field-background-color);
 }
 
-:root[lwt-tree] panel[type="autocomplete-richlistbox"]:-moz-lwtheme {
+:root[lwt-tree] panel[type="autocomplete-richlistbox"] {
   margin-top: -1px;
   padding: 2px 0;
   background: var(--arrowpanel-background);
   color: var(--arrowpanel-color);
   border-color: var(--arrowpanel-border-color);
-  scrollbar-color: rgba(249,249,250,.4) rgba(20,20,25,.3);
+  scrollbar-color: rgba(128, 128, 128, 0.5) rgba(230, 230, 235, 0.5);
+}
+
+:root[lwt-tree-brighttext] panel[type="autocomplete-richlistbox"] {
+  scrollbar-color: rgba(249, 249, 250, 0.4) rgba(20, 20, 25, 0.3);
 }
 
 :root[lwt-tree] .autocomplete-richlistbox {
